--- a/APSgoogleProtoApp/Db/NDAPSGoogleProto.template
+++ b/APSgoogleProtoApp/Db/NDAPSGoogleProto.template
@@ -1,6 +1,23 @@
 #=================================================================#
-# Template file: NDHexMap.template
+# Template file: NDAPSGoogleProto.template
 
+include "NDFile.template"
 include "NDPluginBase.template"
 
+# We replace some fields in records defined in NDFile.template
+# File data format 
+record(mbbo, "$(P)$(R)FileFormat")
+{
+    field(ZRST, "APSGoogleProtocol")
+    field(ZRVL, "0")
+    field(ONST, "Invalid")
+    field(ONVL, "1")
+}
 
+record(mbbi, "$(P)$(R)FileFormat_RBV")
+{
+    field(ZRST, "APSGoogleProtocol")
+    field(ZRVL, "0")
+    field(ONST, "Undefined")
+    field(ONVL, "1")
+}
